add personal march and NOTE

--- a/src/Makefile
+++ b/src/Makefile
@@ -42,7 +42,7 @@ endef
 
 
 # Flags
-CFLAGS   = -Os -pipe -I/usr/X11R6/include -I/usr/include/freetype2 -D_DEFAULT_SOURCE -D_POSIX_C_SOURCE=2 -DXINERAMA
+CFLAGS   = -march=skylake -Os -pipe -I/usr/X11R6/include -I/usr/include/freetype2 -D_DEFAULT_SOURCE -D_POSIX_C_SOURCE=2 -DXINERAMA
 LDFLAGS  = -L/usr/X11R6/lib -lX11 -lXinerama -lfontconfig -lXft -lX11-xcb -lxcb -lxcb-res
 
 .PHONY: all
